# my-cli

./: .env.example  .gitignore  .sqllsrc.json  Cargo.toml  README.md  todos.md
doc/: TODOS.md
migrations/2023-08-28-214019_create_languages/: down.sql  up.sql
migrations/2023-08-28-214306_create_projects/: down.sql  up.sql
migrations/2023-09-03-232735_create_runs/: down.sql  up.sql
migrations/2023-09-13-142154_with_ssh/: down.sql  up.sql
migrations/2023-09-23-130842_default_project_run/: down.sql  up.sql
migrations/2024-02-02-152150_create_todos/: up.sql
migrations/2024-02-04-141043_create_todos_tags/: down.sql  up.sql
migrations/2024-10-14-172007_master_password/: down.sql  up.sql
migrations/2024-10-16-063828_create_crypto_password/: down.sql  up.sql
migrations/2024-10-17-053916_create_projects_crypto/: down.sql  up.sql
migrations/2024-10-17-065006_remove_unused_proj/: up.sql
migrations/2024-11-16-060029_todo_alter/: up.sql
migrations/2024-11-16-061441_tags/: up.sql
migrations/2024-11-16-061455_todos_tags/: down.sql  up.sql
scripts/: dash.example.ps1  dash.ps1
seeds/language/: down.sql
seeds/language/2025-01-29-093618_language/: up.sql
src/: config.rs  database.rs  editor.rs  exceptions.rs  lib.rs  logger.rs  main.rs  models.rs  mover.rs  projects_ui.rs  run.rs  schema.rs  ssh.rs  todos.rs  ui.rs
src/auth/: manager.rs
src/fonts/: mod.rs
