[package]
name = "my-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
diesel = { version = "2.1.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
resolve-path = "0.1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
tabled = { version = "0.14.0", features = ["color"] }
terminal_size = "0.2.6"
