[package]
name = "my-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = ["rand", "std"] }
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
clap = { version = "4.4.1", features = ["derive"] }
colored = "2.1.0"
confy = "0.6.0"
derive_builder = "0.12.0"
diesel = { version = "2.1.1", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
eframe = "0.29.1"
egui = "0.29.1"
resolve-path = "0.1.0"
rpassword = "7.3.1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = "1.0.196"
serde_derive = "1.0.196"
tabled = { version = "0.14.0", features = ["color"] }
terminal_size = "0.2.6"
